<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerInside"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/image_detail_wisata" />
            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_wisata"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="138dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="@string/lokasi" />
                    <TextView
                        android:id="@+id/tv_lokasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lokasi"
                        android:layout_weight="0.8"/>
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail"
                        android:layout_weight="0.2"/>
                    <TextView
                        android:id="@+id/tv_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail"
                        android:layout_weight="0.8"/>
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:layout_weight="0.2"/>
                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:layout_weight="0.8"/>
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ulasan"
                        android:layout_weight="0.2"/>
                    <TextView
                        android:id="@+id/tv_ulasan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ulasan"
                        android:layout_weight="0.8"/>
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>